Fix card placeholder on mobile

--- a/src/modules/Common/components/Card.module.css
+++ b/src/modules/Common/components/Card.module.css
@@ -69,7 +69,6 @@
       font-weight: 300;
       width: 100%;
       height: 16rem;
-      margin-top: -8rem;
     }
 
     border: 3px dashed #DDD;
